--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.pi</groupId>
-	<artifactId>portfy-be</artifactId>
+	<artifactId>sportfy-be</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>portfy-be</name>
+	<name>sportfy-be</name>
 	<description>projeto do pi III</description>
 	<properties>
 		<java.version>17</java.version>
@@ -24,6 +24,15 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
